Fixed topbar spacing on mobile

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -4,12 +4,5 @@
 }
 
 .home {
-    // margin-top: 10vh;
     background-color: #f6f6f6;
-}
-
-@media (max-width: 576px) { 
-  .home {
-    margin-top: 6vh;
-}
 }
